--- a/app/public/views/allocations.html
+++ b/app/public/views/allocations.html
@@ -1,24 +1,21 @@
-{% extends "./layout.html" %} {% block title %}Allocations{% endblock %} {% block content %}
-
 <div class="row">
     <div class="col-lg-12">
 
         <div class="panel panel-default">
             <div class="panel-heading">
-                <strong>Asset Allocations for {{firstName}} {{lastName}}</strong>
+                <strong>Asset Allocations for {{vm.firstName}} {{vm.lastName}}</strong>
             </div>
             <div class="panel-body">
                 <p>Domestic Stocks :
-                    <strong>{{stocks}} %</strong>
+                    <strong>{{vm.stocks}} %</strong>
                 </p>
                 <p>Funds:
-                    <strong>{{funds}} %</strong>
+                    <strong>{{vm.funds}} %</strong>
                 </p>
                 <p>Bonds:
-                    <strong>{{bonds}} %</strong>
+                    <strong>{{vm.bonds}} %</strong>
                 </p>
             </div>
         </div>
     </div>
 </div>
-{% endblock %}
