--- a/app/public/views/benefits.html
+++ b/app/public/views/benefits.html
@@ -1,9 +1,10 @@
-{% extends "./layout.html" %} {% block title %}Benefits Start Date{% endblock %} {% block content %}
+
 <div class="row">
     <div class="col-lg-12">
 
-        {% if updateSuccess %}
-        <div class="row">
+
+
+        <div class="row" ng-show="vm.updateSuccess">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-success">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -12,17 +13,17 @@
             </div>
         </div>
         <!-- /.row -->
-        {% endif %} {% if updateError %}
-        <div class="row">
+
+        <div class="row" ng-show="vm.updateError">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-danger">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    {{data.updateError}}
+                    {{vm.updateError}}
                 </div>
             </div>
         </div>
         <!-- /.row -->
-        {% endif %}
+
     </div>
 </div>
 
@@ -44,9 +45,9 @@
                 </thead>
                 <tbody>
 
-                    {% for user in users %}
 
-                    <tr>
+
+                    <tr ng-repeat="user in vm.users">
                         <td>{{user._id.toString()}}</td>
                         <td>{{user.firstName}}</td>
                         <td>{{user.lastName}}</td>
@@ -63,7 +64,6 @@
                             </form>
                         </td>
                     </tr>
-                    {% endfor %}
                 </tbody>
             </table>
 
@@ -72,4 +72,3 @@
     </div>
 </div>
 
-{% endblock %}
