--- a/app/public/views/contributions.html
+++ b/app/public/views/contributions.html
@@ -1,9 +1,9 @@
-{% extends "./layout.html" %} {% block title %}Contributions{% endblock %} {% block content %}
+
 <div class="row">
     <div class="col-lg-12">
 
-        {% if updateSuccess %}
-        <div class="row">
+
+        <div class="row" ng-show="vm.updateSuccess">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-success">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -12,17 +12,17 @@
             </div>
         </div>
         <!-- /.row -->
-        {% endif %} {% if updateError %}
-        <div class="row">
+
+        <div class="row" ng-show="vm.updateError">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-danger">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                    {{updateError}}
+                    {{vm.updateError}}
                 </div>
             </div>
         </div>
         <!-- /.row -->
-        {% endif %}
+
     </div>
 </div>
 
@@ -62,7 +62,7 @@
 
                                 <tr>
                                     <td>Employee Pre-Tax</td>
-                                    <td>{{ preTax |default(0)}} %</td>
+                                    <td>{{ vm.preTax || 0}} %</td>
                                     <td>
                                         <input type="text" name="preTax" value="0"></input>
                                         <span>%</span>
@@ -70,7 +70,7 @@
                                 </tr>
                                 <tr>
                                     <td>Roth Contribution</td>
-                                    <td>{{ roth |default(0)}} %</td>
+                                    <td>{{ vm.roth || 0}} %</td>
                                     <td>
                                         <input type="text" name="roth" value="0"></input>
                                         <span>%</span>
@@ -78,7 +78,7 @@
                                 </tr>
                                 <tr>
                                     <td>Employee After Tax</td>
-                                    <td>{{ afterTax |default(0)}} %</td>
+                                    <td>{{ vm.afterTax || 0}} %</td>
                                     <td>
                                         <input type="text" name="afterTax" value="0"></input>
                                         <span>%</span>
@@ -131,4 +131,3 @@
     </div>
 </div>
 
-{% endblock %}
