--- a/app/public/views/profile.html
+++ b/app/public/views/profile.html
@@ -1,9 +1,7 @@
-{% extends "./layout.html" %} {% block title %}My Profile{% endblock %} {% block content %}
+
 <div class="row">
     <div class="col-lg-12">
-
-        {% if updateSuccess %}
-        <div class="row">
+        <div class="row" ng-show="vm.updateSuccess">
             <div class="col-lg-12">
                 <div class="alert alert-dismissable alert-success">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -12,7 +10,6 @@
             </div>
         </div>
         <!-- /.row -->
-        {% endif %}
     </div>
 </div>
 
@@ -27,23 +24,23 @@
                 <form role="form" method="post" action="/profile">
                     <div class="form-group">
                         <label for="firstName">First Name</label>
-                        <input type="text" class="form-control" id="firstName" name="firstName" value="{{firstName}}" placeholder="Enter first name">
+                        <input type="text" class="form-control" id="firstName" name="firstName" value="{{vm.firstName}}" placeholder="Enter first name">
                     </div>
                     <div class="form-group">
                         <label for="lastName">Last Name</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" value="{{lastName}}" placeholder="Enter last name">
+                        <input type="text" class="form-control" id="lastName" name="lastName" value="{{vm.lastName}}" placeholder="Enter last name">
                     </div>
                     <div class="form-group">
                         <label for="ssn">SSN</label>
-                        <input type="text" class="form-control" id="ssn" name="ssn" value="{{ssn}}" placeholder="Enter SSN">
+                        <input type="text" class="form-control" id="ssn" name="ssn" value="{{vm.ssn}}" placeholder="Enter SSN">
                     </div>
                     <div class="form-group">
                         <label for="dob">Date of Birth</label>
-                        <input type="date" class="form-control" id="dob" name="dob" value="{{dob}}" placeholder="Enter date of birth">
+                        <input type="date" class="form-control" id="dob" name="dob" value="{{vm.dob}}" placeholder="Enter date of birth">
                     </div>
                     <div class="form-group">
                         <label for="bankAcc">Bank Account #</label>
-                        <input type="text" class="form-control" id="bankAcc" name="bankAcc" value="{{bankAcc}}" placeholder="Enter bank account number">
+                        <input type="text" class="form-control" id="bankAcc" name="bankAcc" value="{{vm.bankAcc}}" placeholder="Enter bank account number">
                     </div>
                     <div class="form-group">
                         <label for="bankRouting">Bank Routing #</label>
@@ -51,13 +48,12 @@
                     </div>
                     <div class="form-group">
                         <label for="address">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" value="{{address}}" placeholder="Enter address">
+                        <input type="text" class="form-control" id="address" name="address" value="{{vm.address}}" placeholder="Enter address">
                     </div>
-                    <input type="hidden" name="_csrf" value="{{csrftoken}}" />
+                    <input type="hidden" name="_csrf" value="{{vm.csrftoken}}" />
                     <button type="submit" class="btn btn-default">Submit</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
-{% endblock %}
